--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "hammerjs": "^2.0.8",
+    "json-server": "^0.17.4",
     "primeicons": "^6.0.1",
     "primeng": "^16.9.1",
     "rxjs": "~7.8.0",
