--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/hammerjs": "^2.0.45",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
+    "json-server-auth": "^2.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
